tests/invalid/module/use_alias_duplicate_import.facet
pub mod api {
  pub fn id(x: affine isize) -> affine isize { x }
}

pub mod other {
  pub fn id(x: affine isize) -> affine isize { x }
}

use api::id as call_id;
use other::id as call_id;

fn main() -> affine isize {
  (call_id 1)
}
